--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -21,4 +21,5 @@ jobs:
         cache: 'maven'
     
     - name: Build with Maven
+      working-directory: complete  # Key change here
       run: mvn -B package
