--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -23,3 +23,8 @@ jobs:
     - name: Build with Maven
       working-directory: complete  # Key change here
       run: mvn -B package
+
+    - name: Build Docker image
+      working-directory: complete
+      run: |
+        docker build -t your-dockerhub-username/gs-spring-boot:latest .
